diljit website practise

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body{
-    background:url("/images/maxresdefault.jpg");
+    background:url("images/maxresdefault.jpg");
     background-position:center;
 }
 h1{
